write proto_rosbag2

--- a/params/test_param.yaml
+++ b/params/test_param.yaml
@@ -1,5 +1,5 @@
 rosbag_converter_node:
   ros__parameters:
     path_in_ros1_bag_file: "/home/mfc/bags/038/038.bag"
-    path_out_ros2_bag_file: "/home/mfc/bags/038/038.db3"
+    path_out_ros2_serialized_binary: "/home/mfc/bags/038/038.serialized_data_for_bags"
     print_type_correspondences_1_to_2: false
